# Kontra

./: .gitignore  CLAUDE.md  Kontra_TODO.md  Kontra_TODO_Full.md  README.md  kontra_bench.sh  kontra_bench_README.md  mkdocs.yml  parquet_meta.py  pyproject.toml  pytest.ini  rules_TODO.md
.github/workflows/: docs.yml
Kontra_Docs_v1.0/: kontra_v1.3_unified.md
benchmarks/: BENCHMARK_ANALYSIS.md  duckdb_vs_polars_local.py  tally_benchmark.py  tally_postgres_benchmark.py  tally_results.json
benchmarks/results/: duckdb_vs_polars_local.json  duckdb_vs_polars_local.md
contracts/: users_10m.yml  users_5m.yml  users_5m_csv.yml  users_5m_parq.yml
contracts/examples/: 01_basic.yml  02_severity_and_context.yml  03_advanced_rules.yml  04_with_datasource.yml  README.md
docs/: CNAME  KONTRA_REFERENCE.md  ROADMAP.md  agent-reference.md  architecture.md  config.md  getting-started.md  ideas-backlog.md  index.md  llms.txt  python-api.md  quickstart.md  robots.txt  rules.md
docs/advanced/: agents-and-llms.md  custom-rules.md  performance.md  probes.md  state-and-diff.md
docs/plans/: v0.5-normalized-state-annotations.md  v0.7-release.md
docs/reference/: architecture.md  cli.md  config.md  contracts.md  glossary.md  probes.md  rules.md
docs/stylesheets/: extra.css
experiments/event-pipeline/: TASK.md  results.json  run_experiment.py  setup_data.py  target_contract.yml
experiments/order-revenue/: TASK.md  results.json  run_experiment.py  setup_data.py  target_contract.yml
experiments/phone-dedup/: TASK.md  result_control.json  result_treatment.json  results.json  run_experiment.py  setup_data.py  target_contract.yml
experiments/session-revenue/: TASK.md  results.json  run_experiment.py  setup_data.py  target_contract.yml
project_manifesto/: Kontra_CLI_and_UX_Spec_v1.2.md  Kontra_MVP_v1.0.md  Kontra_PRD_v1.0.md  Kontra_TAD_v1.1.md  kontra_project_structure_status.md
scripts/: benchmark_sql_approaches.py  generate_users_clean_parquet.py  generate_users_parquet.py  slop_check.py  synthesize_users.py
src/kontra/: __init__.py  errors.py  rule_catalog.py
test_install/: compare_real_sources.py  compare_s3.py  debug_timing.py  demo_custom_agg.py  head_to_head.py  pandera_vs_kontra.ipynb  pandera_vs_kontra.py  prove_metadata.py  test_pandera_metadata.py
tests/: conftest.py  fixtures_csv.py  quick_hybrid_split.py  test_allowed_values_pushdown.py  test_audit_infra_fixes.py  test_azure_support.py  test_cli.py  test_clickhouse_scout_unit.py  test_cloud_backends.py  test_compare.py  test_compare_sql_planning.py  test_config_loader.py  test_config_settings.py  test_contract_inheritance.py  test_custom_sql_pushdown.py  test_decorators.py  test_determinism.py  test_duckdb_materializer_formats.py  test_executor_failure_fallback.py  test_explain.py  test_failure_modes.py  test_goal_directed.py  test_history.py  test_integration.py  test_json_schema_and_parity.py  test_lazy_loading.py  test_mcp_lazy_loading.py  test_mcp_server.py  test_mcp_service.py  test_merge_and_messages.py  test_parquet_meta.py  test_postgres_roundtrip_optimization.py  test_profile_store.py  test_projection_and_pushdown.py  test_python_api.py  test_relationship.py  test_reporters.py  test_rule_audit_fixes.py  test_rule_catalog.py  test_rules_compare.py  (+19 more)
tests/clickhouse/: conftest.py  test_clickhouse_query_source.py  test_clickhouse_scout.py  test_clickhouse_validation.py
tests/postgres/: conftest.py  contract.yml  contract_5m.yml  contract_freshness.yml  contract_with_failures.yml  docker-compose.yml  init.sql  test_mcp_postgres.py  test_postgres_compare.py  test_postgres_compare_sql.py  test_postgres_profile_store.py  test_postgres_query_source.py  test_postgres_scout.py  test_postgres_scout_bugfix.py  test_postgres_validation.py  test_query_source.py
tests/sqlserver/: conftest.py  contract_5m.yml  docker-compose.yml  init.sql  test_sqlserver_compare.py  test_sqlserver_compare_sql.py  test_sqlserver_materializer_pyodbc.py  (+6 more)
(+187 files in other folders)
