[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kontra"                                # package/distribution name
version = "0.1.0"
description = "Developer-first data quality engine"
authors = [{ name = "Kontra Team" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "polars",
  "duckdb",
  "pydantic",
  "typer",
  "rich",
  "pyarrow"
]

[project.scripts]
# primary CLI (new name)
kontra = "kontra.cli.main:main"
# optional: keep the old 'contra' command for backward-compat
contra = "kontra.cli.main:main"

[project.optional-dependencies]
s3 = ["s3fs>=2024.6.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kontra*"]
