[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kontra"
version = "0.12.2"
description = "Developer-first data quality engine"
readme = "README.md"
authors = [{ name = "Saevarlb" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["data-quality", "validation", "data-contracts", "data-profiling", "mcp", "polars", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.0",
    "sqlglot>=20.0.0",
]

[project.urls]
Homepage = "https://kontrakit.io/"
Documentation = "https://kontrakit.dev/"
Repository = "https://github.com/Saevarl/Kontra"
Issues = "https://github.com/Saevarl/Kontra/issues"

[project.scripts]
kontra = "kontra.cli.main:main"
kontra-mcp = "kontra.mcp.cli:main"

[project.optional-dependencies]
s3 = ["s3fs>=2024.6.0"]
postgres = ["psycopg[binary]>=3.0.0"]
mcp = ["mcp>=1.27,<2"]
mcp-postgres = ["mcp>=1.27,<2", "psycopg[binary]>=3.0.0"]
sqlserver = ["pymssql>=2.2.0"]
# Entra ID (Azure AD) auth for Azure SQL / Managed Instance. Requires a
# Microsoft ODBC driver (msodbcsql18) installed on the host. On Linux/macOS the
# driver acquires the token via the Authentication=ActiveDirectory* keywords. On
# Windows those keywords are unsupported, so azure-identity is used to acquire an
# access token that is passed to the driver via pyodbc attrs_before.
sqlserver-entra = ["pyodbc>=5.0.0", "azure-identity>=1.15.0"]
# ClickHouse: HTTP client for the columnar OLAP store.
clickhouse = ["clickhouse-connect>=0.7.0"]
all = [
    "s3fs>=2024.6.0",
    "psycopg[binary]>=3.0.0",
    "pymssql>=2.2.0",
    "pyodbc>=5.0.0",
    "azure-identity>=1.15.0",
    "clickhouse-connect>=0.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kontra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
